# 03rust_ecosystem

./: Cargo.toml  test.rest
examples/: axum_serde.rs  axum_tracing.rs  axum_tracing2.rs  builder.rs  chat.rs  enum.rs  err.rs  more.rs  serde.rs  serde1.rs  shortener.rs
src/: error.rs  lib.rs  main.rs
