[package]
name = "error_study"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
fs = "0.0.5"
thiserror = "2.0.17"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
axum = { version = "0.8.8", features = ["http2", "query", "tracing"] }

