[package]
name = "error_study"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.42", features = ["serde"] }
fs = "0.0.5"
opentelemetry = "0.22.0"
opentelemetry-otlp = { version = "0.15.0", features = ["tonic"] }
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.16.1"
thiserror = "2.0.17"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
axum = { version = "0.8.8", features = ["http2", "query", "tracing"] }
derive_builder = "0.20.2"
derive_more = { version = "2.1", features = ["full"] }
strum = { version = "0.27.2", features = ["derive"] }
base64 = "0.22.1"
http = "1.4.0"


